# wechat-reply-delegation

./: .gitignore  LICENSE  MANIFEST.in  README.md  USER_GUIDE_EN.md  USER_GUIDE_ZH.md  config-template.yaml  proxy-reply-system.md  pyproject.toml  reinstall.py  setup.py  wechat-reply-delegation.md
plugin/: __init__.py  config.py  engine.py  handler.py  installer.py  plugin.py  status_detector.py  time_matcher.py  topic_matcher.py
web/: __init__.py  app.py
web/templates/: dashboard.html  login.html
